[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/button_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/settings_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/how_to_play.tscn" type="PackedScene" id=4]

[node name="Pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.345098 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 395.0
margin_top = 183.0
margin_right = 565.0
margin_bottom = 457.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 170.0
margin_bottom = 42.0

[node name="Resume_button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 170.0
margin_bottom = 100.0
rect_min_size = Vector2( 170, 40 )
focus_neighbour_top = NodePath("../Quit_button")
custom_fonts/font = ExtResource( 2 )
text = "Resume Game"

[node name="Rules_button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 170.0
margin_bottom = 158.0
rect_min_size = Vector2( 170, 40 )
custom_fonts/font = ExtResource( 2 )
text = "How To Play"

[node name="Settings_button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 170.0
margin_bottom = 216.0
rect_min_size = Vector2( 170, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Quit_button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 170.0
margin_bottom = 274.0
rect_min_size = Vector2( 170, 40 )
focus_neighbour_bottom = NodePath("../Resume_button")
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[node name="How_to_play" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume_button" to="." method="_on_Resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Rules_button" to="." method="_on_Rules_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings_button" to="." method="_on_Settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit_button" to="." method="_on_Quit_button_pressed"]
